# voicechanger

./: .gitmodules  CMakeLists.txt  README.md  STM32H750VBTX_FLASH.ld
app/: FreeRTOSConfig.h  freertos.c  main.c  stm32h7xx_hal_conf.h
libs/fatfs_lib/: diskio.c  ff.c  ff.h  ff_gen_drv.c  ff_gen_drv.h
platform_independent/custom/pcm_file/: pcm_file.cpp  pcm_file.h
platform_independent/custom/us_comm/: us_comm.c  us_comm.h
platform_independent/libs_definitions/fatfs/: fatfs.c  fatfs.h  ffconf.h  user_diskio.c  user_diskio.h
platform_independent/libs_definitions/log/: log_conf_custom.h  log_platform_specific.c  printf_config.h
platform_independent/tasks/audio_tasks/: audio_tasks.cpp  audio_tasks.h
platform_independent/tasks/display_tasks/: display_tasks.c  display_tasks.h  lv_conf.h
platform_specific/bsp/buttons/: buttons.c  buttons.h
platform_specific/bsp/current_meas/: current_meas_ll.c  current_meas_ll.h
platform_specific/bsp/dac/: dac.c  dac.h
platform_specific/bsp/debug_gpio/: debug_gpio.c  debug_gpio.h
platform_specific/bsp/display/: display_ll.c  display_ll.h  ssd1306.c  ssd1306_conf.h
platform_specific/bsp/leds/: leds.c  leds.h
platform_specific/bsp/mics/: mics.c  mics.h
platform_specific/bsp/power/: power.c  power.h
platform_specific/bsp/sd_card/: sd_card_ll.c  sd_card_ll.h
platform_specific/bsp/timebase_us/: timebase_us.c  timebase_us.h
platform_specific/bsp/usart/: usart_io.c  usart_io.h  usart_ll.c  usart_ll.h
platform_specific/system/: stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c
